--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,17 @@
+div{
+    background-color: #4aaaa5;
+    color: white;
+    width: 100px;
+    height: 100px;
+}
+
 h2{
     color: teal;
+}
+
+img{
+    position: relative;
+    left: 20px;
+    width: 90px;
+    height: 90px;
 }
