--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,23 @@
+
+
+
 div{
     background-color: #4aaaa5;
     color: white;
     width: 100px;
-    height: 100px;
+    height: 50px;
 }
 
 h2{
-    color: teal;
+    color: #4aaaa5;
+}
+section{
+    position: relative;
+    left: 350px;
+    width: 500px;
+    background-color: #ffffff;
+    color: #777777;
+    overflow: hidden;
 }
 
 img{
@@ -15,3 +26,5 @@ img{
     width: 90px;
     height: 90px;
 }
+
+
