--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,34 +1,36 @@
+body{
+    background-color: #dddddd;
+}
 
-
-
-div{
+h1{
     background-color: #4aaaa5;
     color: white;
     width: 100px;
-    height: 50px;
+}
+.header{
+    background-color: #ffffff;
+    padding: 20px;
 }
 
 h2{
     color: #4aaaa5;
+    margin-top: 20px;
 }
 
-.first{
-    position: relative;
-    
-}
+
 
 section{
-    position: relative;
+    position: absolute;
+    top: 100px;
     left: 350px;
-    width: 500px;
+    width: 600px;
+    height: 450px;
     background-color: #ffffff;
     color: #777777;
-    overflow: hidden;
 }
 
 img{
-    position: relative;
-    left: 20px;
+    float: left;
     width: 150px;
     height: 150px;
 }
