--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,8 +5,12 @@ body{
 h1{
     background-color: #4aaaa5;
     color: white;
+    text-align: center;
     width: 100px;
+    position: relative;
+    left: 350px;
 }
+
 .header{
     background-color: #ffffff;
     padding: 20px;
@@ -14,7 +18,6 @@ h1{
 
 h2{
     color: #4aaaa5;
-    margin-top: 20px;
 }
 
 
