--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,14 +6,15 @@ h1{
     background-color: #4aaaa5;
     color: white;
     text-align: center;
-    width: 100px;
-    position: relative;
+    position: fixed;
     left: 350px;
+    width: 150px;
+    height: 60px;
 }
 
 .header{
     background-color: #ffffff;
-    padding: 20px;
+    padding: 30px;
 }
 
 h2{
@@ -23,7 +24,7 @@ h2{
 
 
 section{
-    position: absolute;
+    position: fixed;
     top: 100px;
     left: 350px;
     width: 600px;
@@ -38,4 +39,21 @@ img{
     height: 150px;
 }
 
+.line{
+    position: fixed;
+    left: 0;
+    bottom: 5px;
+    width: 100%;
+    background-color: #4aaaa5;
+    padding: 20px;
+}
+.footer{
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #666666;
+    padding: 20px;
+
+}
 
