--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,12 +5,11 @@ body{
 h1{
     background-color: #4aaaa5;
     color: white;
-    align-content: center;
+    text-align: center;
     position: relative;
-    height: 40px;
-    /* left: 350px;
-    width: 150px;
-    height: 60px; */
+    width: 200px;
+    height: 60px;
+   left: 30px;
 }
 
 .header{
@@ -18,8 +17,7 @@ h1{
     justify-content: space-around;
     align-items: center;
     background-color: #ffffff;
-    padding: 30px;
-    border: 1px solid red;
+    border-bottom: 2px solid #cccccc;
 }
 
 .boxset{
@@ -32,28 +30,34 @@ h1{
 
 .About{
     background-color: #ffffff;
+    text-align: center;
+    border-right: 1px solid #cccccc;
     position: fixed;
-    top: 0;
-    right: 250px;
+    top: 10px;
+    right: 300px;
     width: 100px;
-    height: 50px;
+    height: 25px;
+    
 }
 
 .Portfolio{
     background-color: #ffffff;
+    text-align: center;
+    border-right: 1px solid #cccccc;
     position: fixed;
-    top: 0;
-    right: 150px;
-    width: 100px;
-    height: 50px;
+    top: 10px;
+    right: 200px;
+    width: 90px;
+    height: 25px;
 }
 .Contact{
     background-color: #ffffff;
+    text-align: center;
     position: fixed;
-    top: 0;
-    right: 50px;
+    top: 10px;
+    right: 100px;
     width: 100px;
-    height: 50px;
+    height: 25px;
 }
 
 h2{
