--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,9 +7,10 @@ h1{
     color: white;
     text-align: center;
     position: relative;
-    width: 200px;
-    height: 60px;
-   left: 30px;
+    width: 150px;
+    height: 50px;
+    left: 20px;
+    padding-top: 15px;
 }
 
 .header{
@@ -64,20 +65,29 @@ h2{
     color: #4aaaa5;
     background-color: #ffffff;
     position: fixed;
-    text-align: justify;
-    font-family: times;
+    font-family: Georgia;
     font-size: 24px;
     top: 100px;
     left: 300px;
-    width: 66.4%;
+    width: 64.9%;
     height: 50px;
+    padding-top: 12px;
+    padding-left: 19px;
 }
 
+.divider{
+    position: fixed;
+    left: 315px;
+    bottom: 500px;
+    width: 64%;
+    background-color: #dddddd;
+    padding: 1px;
+}
 .section{
     position: fixed;
     top: 150px;
     left: 300px;
-    width: 850px;
+    width: 820px;
     height: 300px;
     background-color: #ffffff;
     color: #777777;
@@ -88,7 +98,7 @@ img{
     float: left;
     width: 150px;
     height: 150px;
-    padding: 20px;
+    padding: 5px;
 }
 
 .line{
