edit contact page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,3 +118,22 @@ img{
     padding: 20px;
 
 }
+
+
+
+
+.info{
+    position: fixed;
+    top: 150px;
+    left: 300px;
+    width: 820px;
+    height: 400px;
+    background-color: #ffffff;
+    color: #777777;
+    padding: 15px;
+}
+
+input{
+    width: 800px;
+    height: 30px;
+}
