--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -138,8 +138,19 @@ input{
     height: 30px;
 }
 
+
 input[id="fmessage"]{
 
     width: 800px;
     height: 200px;
+}
+
+input[type="submit"]{
+    
+    background-color: #4aaaa5;
+    color: white;
+    position: relative;
+    top: 15px;
+    width: 80px;
+    height: 28px;
 }
